messed with padding

--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+body {
+    margin: 0;
+    font-family: Roboto;
+}
+
 .container {
     display: flex;
     flex-direction: column;
@@ -7,8 +12,32 @@
     background-color: #1F2937;
 }
 
+.header, .footer, .one, .two, .three, .four {
+    padding: 20px 17%;
+}
+
 .header {
     display: flex;
+    justify-content: space-between;
+    align-items: center;
+    /* padding: 10px 200px; */
+}
+
+.header-logo {
+    font-size: 24px;
+    color: #F9FAF8;
+    font-weight: 700;
+}
+
+.header-links {
+    display: flex;
+    gap: 20px;
+}
+
+a {
+    text-decoration: none;
+    color: #E5E7EB;
+    font-size: 18px;
 }
 
 .one {
@@ -26,13 +55,4 @@
 
 .four {
     flex: 1;
-}
-
-a {
-    text-decoration: none;
-    color: #E5E7EB;
-}
-
-body {
-    margin: 0;
 }
