--- a/style.css
+++ b/style.css
@@ -55,9 +55,13 @@ a {
 }
 
 .sign-up {
-    height: 20px;
     width: 100px;
-    
+    border-radius: 8px;
+    padding: 8px 16px;
+    background-color: #3882F6;
+    color: #F9FAF8;
+    font-weight: 700;
+    border: none;
 }
 
 .subtext {
@@ -85,4 +89,10 @@ a {
 .four {
     height: 250px;
     flex: auto;
+}
+
+.footer {
+    color: #E5E7EB;
+    display: flex;
+    justify-content: center;
 }
